2016-03-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.31 released.

2016-03-02  c.hetherington  <cth@carlh.net>

	* New uk_UA translation from Igor Voytovich.

	* Updated ru_RU translation from Igor Voytovich.

	* Add configurable option to disable EBUR128
	analysis.

2016-03-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.30 released.

2016-03-01  c.hetherington  <cth@carlh.net>

	* Fix failure to recognise image sequence directories
	in some cases.

2016-03-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.29 released.

2016-03-01  Carl Hetherington  <cth@carlh.net>

	* Fix hang / slowdown when previewing subtitles in some
	cases (#812).

2016-02-29  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.6.28 released.

2016-02-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.27 released.

2016-02-28  Carl Hetherington  <cth@carlh.net>

	* Ignore subdirectories when deciding whether a folder
	contains an image sequence or a DCP.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-02-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.26 released.

2016-02-26  Carl Hetherington  <cth@carlh.net>

	* Allow changes to colours of subtitles embedded
	into video files (#795).

2016-02-25  Carl Hetherington  <cth@carlh.net>

	* Plot all video and subtitle content on single tracks
	with audio on the remainder.  Improve rendering quality
	of the timeline.

2016-02-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.25 released.

2016-02-24  Carl Hetherington  <cth@carlh.net>

	* Various fixes to timeline behaviour.

	* Fix download of certificates for CAT745 and CP850.

2016-02-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.24 released.

2016-02-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.23 released.

2016-02-21  Carl Hetherington  <cth@carlh.net>

	* Fix duplicate <LoadFont> nodes in subtitle files.

2016-02-18  c.hetherington  <cth@carlh.net>
