@@ -1,3 +1,7 @@
+2016-03-05  Carl Hetherington  <cth@carlh.net>
+
+	* Try to fix slowdowns on Windows XP (#771).
+
 2016-03-02  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.31 released.
